kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sjf-deployment
  namespace: sjf
  labels:
    app: sjf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sjf
  template:
    metadata:
      labels:
        app: sjf
    spec:
      containers:
      - name: sjf-server
        image: virtualraven/sjf:0.7
        resources:
          requests:
            memory: "64Mi"
            cpu: "2"
          limits:
            memory: "512Mi"
            cpu: "4"
        ports:
        - name: web-http
          containerPort: 80
        securityContext:  
          allowPrivilegeEscalation: false
          runAsUser: 9969
          runAsGroup: 9968
          seccompProfile:
            type: "RuntimeDefault"
          runAsNonRoot: true
          capabilities:
            drop:
              - ALL
            add: 
              - NET_BIND_SERVICE
        livenessProbe:
          httpGet:
            path: /kubernetes/probes/liveness
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  namespace: sjf
  name: sjf-web
spec:
  selector:
    app: sjf
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: web-http
