kubernetes/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sjf-website
  annotations:
    cert-manager.io/cluster-issuer: digitalocean-dns01
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd

spec:
  rules:
    - host: sjf.demo.rahmn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  sjf-web
                port:
                  number: 80
  tls: 
  - hosts:
    - sjf.demo.rahmn.net
    secretName: ingress-cert
